# vvoss-web

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.sh  config.toml
.github/: CODEOWNERS  README.md  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  ci.yml.disabled  deploy.yml  deploy.yml.disabled
docs/: DEPLOYMENT.md  GITHUB-SETUP.md  SERVER.md
scripts/: git-post-receive  setup-git-remote.sh
src/: main.rs
src/libs/: auth.rs  client.rs  config.rs  handlers.rs  mod.rs  translations.rs
static/css/: base.css  fonts.css  phone.css  screen.css  tablet.css  wide.css
templates/: base.tera
templates/components/: loading.tera  scrollbar.tera
templates/content/: index.tera  knowledge.tera
templates/partials/: impressum.tera  index.tera  loading.tera  portfolio.tera
templates/translations/: strings.csv
